// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates a valid rounded rating value for the data-star attr 1`] = `
<div
  aria-label="1.5 out of 5 star rating"
  className="root small"
  data-star={1.5}
  onMouseLeave={[Function]}
  role="img"
/>
`;

exports[`generates the correct aria-label 1`] = `
<div
  aria-label="2 out of 5 star rating"
  className="root small"
  data-star={2}
  onMouseLeave={[Function]}
  role="img"
/>
`;

exports[`generates the correct aria-label with 1 star rating 1`] = `
<div
  aria-label="1 out of 5 star rating"
  className="root small"
  data-star={1}
  onMouseLeave={[Function]}
  role="img"
/>
`;

exports[`generates the correct role attr 1`] = `
<div
  aria-label="1 out of 5 star rating"
  className="root small"
  data-star={1}
  onMouseLeave={[Function]}
  role="img"
/>
`;

exports[`renders 0 star rating 1`] = `
<StarRating
  rating={0}
>
  <div
    aria-label="0 out of 5 star rating"
    className="root small"
    data-star={0}
    onMouseLeave={[Function]}
    role="img"
  />
</StarRating>
`;

exports[`renders 2.5 star rating 1`] = `
<StarRating
  rating={2.5}
>
  <div
    aria-label="2.5 out of 5 star rating"
    className="root small"
    data-star={2.5}
    onMouseLeave={[Function]}
    role="img"
  />
</StarRating>
`;

exports[`renders 3 star rating 1`] = `
<StarRating
  rating={3}
>
  <div
    aria-label="3 out of 5 star rating"
    className="root small"
    data-star={3}
    onMouseLeave={[Function]}
    role="img"
  />
</StarRating>
`;

exports[`renders 5 label elements in total 1`] = `
<StarRating
  onStarClick={[Function]}
  rating={3}
>
  <div
    aria-label="3 out of 5 star rating"
    className="root small"
    data-star={3}
    onMouseLeave={[Function]}
    role="img"
  >
    <form>
      <label
        key="0"
        onMouseEnter={[Function]}
      >
        <input
          name="rating"
          onClick={[Function]}
          type="radio"
          value={1}
        />
        1
      </label>
      <label
        key="1"
        onMouseEnter={[Function]}
      >
        <input
          name="rating"
          onClick={[Function]}
          type="radio"
          value={2}
        />
        2
      </label>
      <label
        key="2"
        onMouseEnter={[Function]}
      >
        <input
          name="rating"
          onClick={[Function]}
          type="radio"
          value={3}
        />
        3
      </label>
      <label
        key="3"
        onMouseEnter={[Function]}
      >
        <input
          name="rating"
          onClick={[Function]}
          type="radio"
          value={4}
        />
        4
      </label>
      <label
        key="4"
        onMouseEnter={[Function]}
      >
        <input
          name="rating"
          onClick={[Function]}
          type="radio"
          value={5}
        />
        5
      </label>
    </form>
  </div>
</StarRating>
`;
